# bootc-daemon-varlink

./: .gitignore  Cargo.toml  README.md  REUSE.toml
.github/workflows/: buildroot.yml  rust.yml
client/: Cargo.toml  build.rs
client/src/: main.rs  org.bootc.varlink  org_bootc.rs
daemon/: Cargo.toml  build.rs
daemon/src/: main.rs  org.bootc.varlink  org_bootc.rs
