# SPDX-FileCopyrightText: Timothée Ravier <tim@siosm.fr>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "bootc-client"
license = "Apache-2.0 OR MIT"
version = "0.1.0"
authors = ["Timothée Ravier"]
edition = "2024"
build = "build.rs"
rust-version = "1.85.0"

[build-dependencies]
varlink_generator = "13.0.0"

[dependencies]
varlink = "13.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.215"
