# SPDX-FileCopyrightText: Timothée Ravier
# SPDX-License-Identifier: CC0-1.0

[package]
name = "bootc-daemon"
license = "Apache-2.0 OR MIT"
version = "0.1.0"
authors = ["Timothée Ravier"]
edition = "2021"
build = "build.rs"

[build-dependencies]
varlink_generator = "10.1.0"

[dependencies]
varlink = "11.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.215"
